Changed name app from grepr to rsch(Remote Search).

--- a/src/main/resources/GrepBundle_en_US.properties
+++ b/src/main/resources/GrepBundle_en_US.properties
@@ -23,6 +23,6 @@ PROPERTIES_FILE_NOT_INFORMED=Error: Was not informed the path of the properties 
 SCP_SERVER_ORIGIN_NOT_INFORMED=Error: Was not informed the origin server that will be copied. Add it through option [--server=some_server] or [-s some_server]\n
 SCP_SOURCE_PATH=Error: Was not informed the path of the source from where will be copied. Add it through option [--from=some_path] or [-f some_path]\n
 SCP_DESTINATION_PATH=Error: Was not informed the path of the destination for where will be copied. Add it through option [--to=some_path] or [-t some_path]\n
-APP_SYNTAX=Use: %s grepr %s [OPTION]... PATTERN [FILE]...\nTry 'grepr --help' for more information.\n
+APP_SYNTAX=Use: %s rsch %s [OPTION]... PATTERN [FILE]...\nTry 'rsch --help' for more information.\n
 KEYWORD_NO_INFORMED=Error: Was not informed the keyword to be searched.\n
 LOCAL_TARGET_TO_SEARCH=Erro: Was not informed one or more targets destination where will be searched the keyword.\n
