--- a/src/main/resources/GrepHelpBundle_en_US.properties
+++ b/src/main/resources/GrepHelpBundle_en_US.properties
@@ -1,4 +1,4 @@
-help=\u001B[1;37m \nUSE:\u001B[0m\tgrepr [OPTION]...\
+help=\u001B[1;37m \nUSE:\u001B[0m\trsch [OPTION]...\
 \n\
 \n\
 Where option are:\
@@ -20,13 +20,13 @@ Where option are:\
 \u001B[37mExample:  \u001B[0m\
 \n\
 \n\
-grepr -s 192.168.0.2 -u root -p 123pass -g Rin foo /tmp\
+rsch -s 192.168.0.2 -u root -p 123pass -g Rin foo /tmp\
 \n\
 \n\
 \u001B[37mOr still with the extends options, for example:\u001B[0m\
 \n\
 \n\
-grepr --server=192.168.0.2 --user=root --password=123pass --grep=Rin \
+rsch --server=192.168.0.2 --user=root --password=123pass --grep=Rin \
 foo /tmp\
 \n\
 \n\
@@ -44,7 +44,7 @@ passados ao\nutilitario(esse utilitario, no caso).\
 \u001B[37mFor example:\u001B[0m\
 \n\
 \n\
-grepr -s 192.168.0.2 -u root -p 123pass -g Rin foo bar\ /tmp\
+rsch -s 192.168.0.2 -u root -p 123pass -g Rin foo bar\ /tmp\
 \n\
 \n\
 The same case se aplica aos argumentos passados para o comando -g, --grep. Como citado\n\
@@ -59,7 +59,7 @@ interporlar essas opcoes em uma unica.\
 \u001B[37mFollow the example:  \u001B[0m\
 \n\
 \n\
-grepr --server=192.168.0.2 --user=foo --password=123 --grep=\Rin -A 10 -B 10\ foo /tmp\
+rsch --server=192.168.0.2 --user=foo --password=123 --grep=\Rin -A 10 -B 10\ foo /tmp\
 \n\
 \n\
 The above command, will fetch by the word foo, on directory /tmp/ localizado no servidor\n\
@@ -106,7 +106,7 @@ e\n\u001B[37m[-t, --to=]\u001B[0m, os quais representam a origem e o destino, re
 \u001B[37mBy example:  \u001B[0m\
 \n\
 \n\
-grepr --download --server=t.com --username=f --password=2 --from=/tmp/o.txt --to=/bkp/\
+rsch --download --server=t.com --username=f --password=2 --from=/tmp/o.txt --to=/bkp/\
 \n\
 \n\
 O comando acima, fara com que o arquivo o.txt, localizado no diretorio /tmp/, no\n\
@@ -121,13 +121,13 @@ apos a opcao -t, ou em sua vertente extendida --to=.\
 \u001B[37mLook how on example above:\u001B[0m\
 \n\
 \n\
-grepr --download --server=t.com --username=f --password=2 --from=/tmp/o.txt --to=.\
+rsch --download --server=t.com --username=f --password=2 --from=/tmp/o.txt --to=.\
 \n\
 \n\
 \u001B[37mThe example below, show an example running on SO Windows:\u001B[0m\
 \n\
 \n\
-grepr --download --server=t.com --username=f --password=2 --from=/p/o.txt --to=C:\\User\\F\
+rsch --download --server=t.com --username=f --password=2 --from=/p/o.txt --to=C:\\User\\F\
 \n\
 \n\
 \u001B[1;37mSuporte\u001B[0m\
