--- a/src/main/resources/GrepBundle_pt_BR.properties
+++ b/src/main/resources/GrepBundle_pt_BR.properties
@@ -23,6 +23,6 @@ PROPERTIES_FILE_NOT_INFORMED=Erro: Nao foi informado o caminho do arquivo de pro
 SCP_SERVER_ORIGIN_NOT_INFORMED=Erro: Nao foi informado o servidor de origem que sera realizado a copia. Informe-a atraves da opcao [--server=algum_servidor] ou [-s algum_servidor]\n
 SCP_SOURCE_PATH=Erro: Nao foi informado o caminho de origem de onde a copia sera realizada. Informe-o atraves da opcao [--from=algum_caminho] ou [-f algum_caminho]\n
 SCP_DESTINATION_PATH=Erro: Nao foi informado o caminho de destino para onde a copia sera realizada. Informe-o atraves da opcao [--to=algum_caminho] ou [-t algum_caminho]\n
-APP_SYNTAX=Uso: %s grepr %s [OPCAO]... PADRAO [ARQUIVO]...\nTente 'grepr --help' para maiores informacoes.\n
+APP_SYNTAX=Uso: %s rsch %s [OPCAO]... PADRAO [ARQUIVO]...\nTente 'rsch --help' para maiores informacoes.\n
 KEYWORD_NO_INFORMED=Erro: Nao foi informada a palavra chave a ser pesquisada.\n
 LOCAL_TARGET_TO_SEARCH=Erro: Nao foi informado um ou mais destinos alvos onde serao pesquisados a palavra chave.\n
